5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1595_1016.log
== TEST (2019-06-24 15:17:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

semiperimetro = a+b+c//2
area = sqrt(semiperimetro(semiperimetro - a)(semiperimetro - b)(semiperimetro - c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(semiperimetro(semiperimetro - a)(semiperimetro - b)(semiperimetro - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:18:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

semiperimetro = a+b+c//2
area = sqrt(semiperimetro(semiperimetro - a)(semiperimetro - b)(semiperimetro - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(semiperimetro(semiperimetro - a)(semiperimetro - b)(semiperimetro - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:18:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = int(input(""))
b = int(input(""))
c = int(input(""))

semiperimetro = a+b+c//2
area = sqrt(semiperimetro(semiperimetro - a)(semiperimetro - b)(semiperimetro - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:19:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = int(input(""))
b = int(input(""))
c = int(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:20:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input("")
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
File "XXXX", line 7
    c = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:20:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input("")
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
File "XXXX", line 7
    c = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:20:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:30:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 15:31:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 14:57:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 14:58:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = int(input(""))
b = int(input(""))
c = int(input(""))

s = a + b +c //2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input(""))
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:16:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = (a + b +c) /2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:16:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = (a + b +c) /2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:17:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
a = float(input(""))
b = float(input(""))
c = float(input(""))

s = (a + b +c) /2
area = sqrt(s(s - a)(s - b)(s - c))
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    area = sqrt(s(s - a)(s - b)(s - c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:20:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

a = float(input(""))
b = float(input(""))
c = float(input(""))

s = (a + b + c)/2
area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 15:20:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*

a = float(input(""))
b = float(input(""))
c = float(input(""))

s = (a + b + c)/2
area = sqrt(s * (s - a) * (s - b) * (s - c))
print(round(area, 5))
-- EXECUTION TIME:
0.867553
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
